<resources>
    <string name="app_name">PTLOG</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="space">Space</string>
    <string name="next">Next</string>
    <string name="save">Save</string>

    <string name="q">q</string>
    <string name="w">w</string>
    <string name="e">e</string>
    <string name="r">r</string>
    <string name="t">t</string>
    <string name="y">y</string>
    <string name="u">u</string>
    <string name="i">i</string>
    <string name="o">o</string>
    <string name="p">p</string>

    <string name="a">a</string>
    <string name="s">s</string>
    <string name="d">d</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>

    <string name="z">z</string>
    <string name="x">x</string>
    <string name="c">c</string>
    <string name="v">v</string>
    <string name="b">b</string>
    <string name="n">n</string>
    <string name="m">m</string>

    <string name="delete_image_button">Image of the delete button</string>

    <string name="HintExerciseName">Exercise name…</string>
    <string name="HintWeight">Weight…</string>
    <string name="HintRepetitions">Repetitions…</string>

    <string name="Stats">%1$d KG x %2$d reps</string>
    <string name="parent">Parent</string>
</resources>
