<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/five" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/q" />

        <Button
            android:id="@+id/button_w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/w" />

        <Button
            android:id="@+id/button_e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/e" />

        <Button
            android:id="@+id/button_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/r" />

        <Button
            android:id="@+id/button_t"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/t" />

        <Button
            android:id="@+id/button_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/y" />

        <Button
            android:id="@+id/button_u"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/u" />

        <Button
            android:id="@+id/button_i"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/i" />

        <Button
            android:id="@+id/button_o"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/o" />

        <Button
            android:id="@+id/button_p"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/p" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/a" />

        <Button
            android:id="@+id/button_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/s" />

        <Button
            android:id="@+id/button_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/d" />

        <Button
            android:id="@+id/button_f"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/f" />

        <Button
            android:id="@+id/button_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/g" />

        <Button
            android:id="@+id/button_h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/h" />

        <Button
            android:id="@+id/button_j"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/j" />

        <Button
            android:id="@+id/button_k"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/k" />

        <Button
            android:id="@+id/button_l"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/l" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-3dp"
            android:layout_weight="1"
            android:text="@string/dot" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_caps"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/capslock_icon" />

        <Button
            android:id="@+id/button_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/z" />

        <Button
            android:id="@+id/button_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/x" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/c" />

        <Button
            android:id="@+id/button_v"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/v" />

        <Button
            android:id="@+id/button_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/b" />

        <Button
            android:id="@+id/button_n"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/n" />

        <Button
            android:id="@+id/button_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/m" />

        <ImageButton
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="-4dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/backspace_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/set" />

        <Button
            android:id="@+id/button_space"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/space" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>
</merge>